# prism32

./: .gitignore  Install-Prism32-Windows.cmd  README-GITHUB.md  README.md  README_WINDOWS.md  bootstrap.sh  floppy-install.sh  install.ps1  install.sh  make_floppy.py  openwrt-install.sh  prism32.py  pyproject.toml  termux-install.sh
.github/workflows/: release-pyc.yml  test.yml
plugins/: web_scraper.py
tests/: test_automation.py  test_bsd_compat.py  test_config.py  test_context_compress.py  test_conversation_flow.py  test_cpu_detect.py  test_evolve_harness.py  test_extend.py  test_interjection.py  test_memory.py  test_platform.py  test_run_cmd.py  test_theme.py  test_url_ssl.py
